<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:orientation="vertical"
    android:padding="40dp"

    tools:showIn="@layout/activity_log_in" tools:context="com.example.xiejingwen.ucsdcarpool20.Log_in"
    android:weightSum="1">


    <ImageView
        android:id="@+id/ucsd_logo"
        android:layout_marginTop="20dp"
        android:layout_width="324828dp"
        android:layout_height="105dp"
        android:src = "@mipmap/ucsd_logo"
        android:layout_gravity="center" />

    <EditText
        android:id="@+id/user_name"
        android:layout_marginTop="35dp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_below="@id/ucsd_logo"
        android:hint="Username"/>


    <EditText
        android:id="@+id/pwd"
        android:layout_marginTop="20dp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="Password"
        android:layout_gravity="center"
        android:inputType="textPassword"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <Button
            android:id="@+id/login"
            android:background="#87cefa"
            android:text="Log in"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="loginToApp"/>
        <!--"loginToApp is the method called when click button"-->



        <Button
            android:id="@+id/quit"
            android:background="#87cefa"
            android:layout_marginTop="30dp"
            android:text="Register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>




</LinearLayout>
