...
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="*E-mail" />


    <TextView
        android:id="@+id/starMarkInput"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="75dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="(*) indicates required fields"/>

...
