<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_marginTop="20dp"
    android:layout_marginLeft="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/user_name"
        android:layout_marginTop="60dp"
        android:layout_marginRight="10dp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="*Username"/>


    <EditText
        android:id="@+id/user_password"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:inputType="textPassword"
        android:hint="*Password" />

    <EditText
        android:id="@+id/user_email"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="*E-mail" />


    <TextView
        android:layout_marginTop="30dp"
        android:layout_marginLeft="75dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="(*) indicates required fields"/>

    <LinearLayout android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:background="#90CAF9"
            android:layout_marginTop="40dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="65dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Register"
            android:id="@+id/register" />

        <Button
            android:background="#90CAF9"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="10dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="Reset"
            android:id="@+id/reset" />
    </LinearLayout>



</LinearLayout>