<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:gravity="center"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout android:id="@+id/driver"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:background="#F8BBD0"
                android:id="@+id/back_driver"
                android:layout_width="78dp"
                android:layout_height="wrap_content"
                android:text="Back"/>

            <Button
                android:background="#FF80AB"
                android:id="@+id/backtobasicprofile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Back to Basic Profile"
                android:layout_weight="0.7"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Driver Profile"
            android:textSize="30sp"
            android:padding="15dp"
            android:layout_gravity="center"/>


        <EditText
            android:id="@+id/user_driverlicense_update_driver"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="*DriverLicense"/>

        <EditText
            android:id="@+id/user_expiredate_update_driver"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="*ExpireDate"/>


        <EditText
            android:id="@+id/user_make_update_driver"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="Make"/>

        <EditText
            android:id="@+id/user_year_update_driver"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="Year"/>

        <EditText
            android:id="@+id/user_color_update_driver"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="*Color"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:background="#90CAF9"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="80dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Save"
                android:id="@+id/driver_save" />
            <Button
                android:background="#90CAF9"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Reset"
                android:id="@+id/driver_reset" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>